# autd3-cpp-link-soem

./: .gitmodules  CMakeLists.txt  Makefile.toml  README.md  ThirdPartyNotice.txt  build.py
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
examples/: CMakeLists.txt  remote_soem.cpp  soem.cpp  util.hpp
include/: autd3-link-soem.hpp  autd3_link_soem.hpp
include/autd3-link-soem/: native_methods.hpp  soem.hpp
include/autd3-link-soem/native_methods/: autd3-link-soem.h
include/autd3_link_soem/: native_methods.hpp  soem.hpp
include/autd3_link_soem/native_methods/: autd3-capi-link-soem.h  autd3-link-soem.h
tests/: CMakeLists.txt  soem.cpp
tools/wrapper-generator/: Cargo.toml
tools/wrapper-generator/src/: main.rs
